AUTOMAKE_OPTIONS = 1.4 foreign
MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.h.in configure depcomp install-sh missing compile
AM_CPPFLAGS = -DDATADIR=\"$(datadir)\"
SUBDIRS=src
datadir=@prefix@/share/@PACKAGE@
filesdir = @prefix@/share/@PACKAGE@
files_DATA= tortosarc tortosa.css tortosa.png tortosa.svg README INSTALL ChangeLog AUTHORS COPYING
