bin_PROGRAMS = palette_tests #another_stuff_tests

palette_tests_LDFLAGS = $(DEV_DEPS_LIBS)
palette_tests_CPPFLAGS = $(DEV_DEPS_CFLAGS)
palette_tests_SOURCES = palette_tests.c

# another_stuff_tests_LDFLAGS = $(DEPS_LIBS)
# another_stuff_tests_CPPFLAGS = $(DEPS_CFLAGS)
# another_stuff_tests_SOURCES = another_stuff_tests.c
